syntax = "proto3";

package auth;

service AuthService {
  // User-related methods
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc VerifyOTP (VerifyOTPRequest) returns (VerifyOTPResponse);
  rpc ResendOTP (ResendOTPRequest) returns (ResendOTPResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc GetCurrentUser (GetCurrentUserRequest) returns (UserResponse);
  rpc Logout (LogoutRequest) returns (LogoutResponse);
  rpc RequestPasswordReset (PasswordResetRequest) returns (PasswordResetResponse);
  rpc ResetPassword (PasswordResetConfirmRequest) returns (ResetPasswordResponse);
  rpc UpdateProfile (UpdateProfileRequest) returns (UserResponse);
  rpc GetProfile (GetProfileRequest) returns (UserResponse);
  rpc GeneratePresignedUrl (GeneratePresignedUrlRequest) returns (GeneratePresignedUrlResponse);
  rpc VerifyRefreshToken (VerifyRefreshTokenRequest) returns (VerifyRefreshTokenResponse);

  // Admin-related methods
  rpc GetUsers (GetUsersRequest) returns (GetUsersResponse);
  rpc GetUserFullDetails (GetUserFullDetailsRequest) returns (UserResponse);
  rpc ToggleUserState (ToggleUserStateRequest) returns (ToggleUserStateResponse);
}

// User-related messages
message RegisterRequest {
  string email = 1;
  string username = 2;
  string name = 3;
  string password = 4;
}

message UserResponse {
  string id = 1;
  string email = 2;
  string username = 3;
  string name = 4;
  string role = 5;
  bool isVerified = 6;
  string profilePicture = 7;
  string location = 8;
  string bio = 9;
  string createdAt = 10;
  string updatedAt = 11;
}

message RegisterResponse {
  string message = 1;
}

message VerifyOTPRequest {
  string email = 1;
  string otp = 2;
}

message VerifyOTPResponse {
  string message = 1;
  User user = 2;
}

message ResendOTPRequest {
  string email = 1;
}

message ResendOTPResponse {
  string message = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string message = 1;
  User user = 2;
}

message GetCurrentUserRequest {
  string user_id = 1;
}

message LogoutRequest {
  string user_id = 1;
  string access_token = 2;
  string refresh_token = 3;
}

message LogoutResponse {
  bool success = 1;
  string message = 2;
}

message PasswordResetRequest {
  string email = 1;
}

message PasswordResetResponse {
  string message = 1;
}

message PasswordResetConfirmRequest {
  string token = 1;
  string new_password = 2;
}

message ResetPasswordResponse {
  string message = 1;
}

message UpdateProfileRequest {
  string user_id = 1;
  string name = 2;
  string username = 3;
  string location = 4;
  string bio = 5;
  string profile_picture = 6;
}

message GetProfileRequest {
  string user_id = 1;
}

message GeneratePresignedUrlRequest {
  string user_id = 1;
  string operation = 2;
  string file_name = 3;
  string file_type = 4;
  string key = 5;
}

message GeneratePresignedUrlResponse {
  string url = 1;
  string key = 2;
  int64 expires_at = 3;
}

message VerifyRefreshTokenRequest {
  string email = 1;
}

message VerifyRefreshTokenResponse {
  string message = 1;
  User user = 2;
}

// Admin-related messages
message GetUsersRequest {
  int32 page = 1;
  int32 limit = 2;
  string status = 3;
  string search = 4;
  string date = 5;
}

message GetUsersResponse {
  repeated User users = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
  int32 total_pages = 5;
}

message GetUserFullDetailsRequest {
  string user_id = 1;
}

message ToggleUserStateRequest {
  string user_id = 1;
}

message ToggleUserStateResponse {
  bool success = 1;
}

// Common messages
message User {
  string id = 1;
  string email = 2;
  string username = 3;
  string name = 4;
  string role = 5;
  bool email_verified = 6;
  string profile_picture = 7;
  string location = 8;
  string bio = 9;
  repeated string skills = 10;
  int32 years_of_experience = 11;
  string job_title = 12;
  string company = 13;
  bool is_blocked = 14;
  string created_at = 15;
}